--- a/src/features/OkrDisplay/style.css
+++ b/src/features/OkrDisplay/style.css
@@ -44,6 +44,12 @@
   color: var(--error);
 }
 
+.okr-display .okr-filter-empty{
+  width: 100%;
+text-align: center;
+color: var(--primary);
+}
+
 .okr-display .display-box-container {
   width: 100%;
   margin-bottom: var(--default-margin);
